--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LaTeX to PDF & Pomodoro with Music</title>
+  <title>CFA Prep</title>
   <!-- Google Fonts placeholder; will be updated dynamically -->
   <link id="google-fonts" rel="stylesheet" href="" />
   <style>
