--- a/index.html
+++ b/index.html
@@ -109,12 +109,13 @@
       font-size: 1em;
       align-self: flex-start;
     }
-    /* Hidden preview for rendering LaTeX */
+    /* Hidden preview for rendering LaTeX but visible to html2canvas */
     #latex-preview {
-      visibility: hidden;
       position: absolute;
       top: -9999px;
       left: -9999px;
+      opacity: 0;
+      visibility: visible;
     }
   </style>
   <!-- MathJax -->
@@ -153,210 +154,4 @@
     </div>
   </div>
   <div id="main">
-    <h2>LaTeX to PDF Cheatsheet</h2>
-    <form id="latex-form" onsubmit="return false;">
-      <textarea id="latex-input" placeholder="Enter LaTeX code here..."></textarea>
-      <div id="options">
-        <div>
-          <label for="font-family">Font Family:</label>
-          <select id="font-family">
-            <option value="Roboto">Roboto</option>
-            <option value="Open+Sans">Open Sans</option>
-            <option value="Lato">Lato</option>
-            <option value="Montserrat">Montserrat</option>
-            <option value="Source+Sans+Pro">Source Sans Pro</option>
-          </select>
-        </div>
-        <div>
-          <label for="font-size">Font Size (pt):</label>
-          <input type="number" id="font-size" value="12" min="6" max="36" />
-        </div>
-      </div>
-      <button id="generate-btn">Generate PDF</button>
-    </form>
-    <!-- Hidden preview area for rendering LaTeX -->
-    <div id="latex-preview"></div>
-  </div>
-
-  <script>
-    // Pomodoro Timer Logic
-    let timerInterval;
-    let isRunning = false;
-    let isWork = true;
-    let remainingTime = 0; // in seconds
-    let totalCycles = 0;
-    let currentCycle = 0;
-
-    const display = document.getElementById('timer-display');
-    const workInput = document.getElementById('work-duration');
-    const restInput = document.getElementById('rest-duration');
-    const cyclesInput = document.getElementById('cycles');
-    const startBtn = document.getElementById('start-btn');
-    const pauseResumeBtn = document.getElementById('pause-resume-btn');
-    const resetBtn = document.getElementById('reset-btn');
-
-    function updateDisplay() {
-      const minutes = Math.floor(remainingTime / 60).toString().padStart(2, '0');
-      const seconds = (remainingTime % 60).toString().padStart(2, '0');
-      display.textContent = `${minutes}:${seconds}`;
-    }
-
-    function switchSession() {
-      if (isWork) {
-        isWork = false;
-        remainingTime = parseInt(restInput.value) * 60;
-      } else {
-        currentCycle++;
-        if (currentCycle >= totalCycles) {
-          clearInterval(timerInterval);
-          isRunning = false;
-          alert('All ' + totalCycles + ' cycles complete!');
-          resetState();
-          return;
-        }
-        isWork = true;
-        remainingTime = parseInt(workInput.value) * 60;
-      }
-      updateDisplay();
-      timerInterval = setInterval(tick, 1000);
-      pauseResumeBtn.textContent = 'Pause';
-      pauseResumeBtn.disabled = false;
-      resetBtn.disabled = false;
-    }
-
-    function tick() {
-      if (remainingTime > 0) {
-        remainingTime--;
-        updateDisplay();
-      } else {
-        clearInterval(timerInterval);
-        isRunning = false;
-        alert(isWork ? 'Work session complete! Time to rest.' : 'Rest session complete!');
-        switchSession();
-        startBtn.disabled = false;
-      }
-    }
-
-    function resetState() {
-      clearInterval(timerInterval);
-      isRunning = false;
-      isWork = true;
-      remainingTime = 0;
-      currentCycle = 0;
-      totalCycles = 0;
-      updateDisplay();
-      startBtn.disabled = false;
-      pauseResumeBtn.disabled = true;
-      resetBtn.disabled = true;
-    }
-
-    startBtn.addEventListener('click', () => {
-      if (!isRunning) {
-        totalCycles = parseInt(cyclesInput.value);
-        currentCycle = 0;
-        isWork = true;
-        remainingTime = parseInt(workInput.value) * 60;
-        updateDisplay();
-        timerInterval = setInterval(tick, 1000);
-        isRunning = true;
-        startBtn.disabled = true;
-        pauseResumeBtn.disabled = false;
-        resetBtn.disabled = false;
-        pauseResumeBtn.textContent = 'Pause';
-      }
-    });
-
-    pauseResumeBtn.addEventListener('click', () => {
-      if (isRunning) {
-        clearInterval(timerInterval);
-        isRunning = false;
-        pauseResumeBtn.textContent = 'Resume';
-      } else {
-        timerInterval = setInterval(tick, 1000);
-        isRunning = true;
-        pauseResumeBtn.textContent = 'Pause';
-      }
-    });
-
-    resetBtn.addEventListener('click', resetState);
-
-    // Music Player Logic
-    const toggleMusicBtn = document.getElementById('toggle-music-btn');
-    const musicPlayerDiv = document.getElementById('music-player');
-    const youtubeLinkInput = document.getElementById('youtube-link');
-    let isMusicVisible = false;
-
-    toggleMusicBtn.addEventListener('click', () => {
-      if (!isMusicVisible) {
-        const url = youtubeLinkInput.value.trim();
-        if (!url) { alert('Please enter a valid YouTube Live URL.'); return; }
-        let videoId;
-        try {
-          const urlObj = new URL(url);
-          videoId = urlObj.searchParams.get('v') || urlObj.pathname.split('/').pop();
-        } catch (e) { alert('Invalid URL format.'); return; }
-        musicPlayerDiv.innerHTML = `<iframe src="https://www.youtube.com/embed/${videoId}?autoplay=1&controls=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>`;
-        musicPlayerDiv.style.height = '200px';
-        toggleMusicBtn.textContent = 'Hide Player';
-        isMusicVisible = true;
-      } else {
-        musicPlayerDiv.innerHTML = '';
-        musicPlayerDiv.style.height = '0';
-        toggleMusicBtn.textContent = 'Show Player';
-        isMusicVisible = false;
-      }
-    });
-
-    // LaTeX to PDF Logic
-    const generateBtn = document.getElementById('generate-btn');
-    const latexInput = document.getElementById('latex-input');
-    const latexPreview = document.getElementById('latex-preview');
-    const fontFamilySelect = document.getElementById('font-family');
-    const fontSizeInput = document.getElementById('font-size');
-
-    async function loadGoogleFont(font) {
-      const link = document.getElementById('google-fonts');
-      link.href = `https://fonts.googleapis.com/css2?family=${font.replace(/ /g, '+')}&display=swap`;
-      document.body.style.fontFamily = `'${font.replace(/\+/g, ' ')}', sans-serif`;
-      return new Promise((resolve) => { link.onload = resolve; });
-    }
-
-    async function generatePDF() {
-      const latexCode = latexInput.value.trim();
-      if (!latexCode) { alert('Please enter LaTeX code.'); return; }
-      const font = fontFamilySelect.value;
-      const fontSize = parseInt(fontSizeInput.value, 10);
-
-      await loadGoogleFont(font);
-      latexPreview.innerHTML = `$$${latexCode}$$`;
-      await MathJax.typesetPromise([latexPreview]);
-      latexPreview.style.fontSize = `${fontSize}pt`;
-      latexPreview.style.color = '#000';
-      latexPreview.style.backgroundColor = '#fff';
-      latexPreview.style.padding = '10px';
-
-      setTimeout(async () => {
-        const canvas = await html2canvas(latexPreview, { backgroundColor: '#fff' });
-        const imgData = canvas.toDataURL('image/png');
-        const { jsPDF } = window.jspdf;
-        const pdf = new jsPDF({ unit: 'mm', format: [74, 105] });
-        const imgProps = pdf.getImageProperties(imgData);
-        const pdfWidth = 74;
-        const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
-        pdf.addImage(imgData, 'PNG', 0, 0, pdfWidth, pdfHeight);
-        const blob = pdf.output('blob');
-        const url = URL.createObjectURL(blob);
-        const link = document.createElement('a');
-        link.href = url;
-        link.download = 'cheatsheet.pdf';
-        document.body.appendChild(link);
-        link.click();
-        document.body.removeChild(link);
-        URL.revokeObjectURL(url);
-      }, 500);
-    }
-
-    generateBtn.addEventListener('click', generatePDF);
-  </script>
-</body>
-</html>
+    <h2>LaTeX to PDF Cheatsheet</n
